updated css and links

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 body {
-  background: #bcf5e6;
+  background: #f5dcbc;
 }
 
 a {
-  color: #309a7e;
+  color: #ffa358;
 }
 
 .App {
@@ -15,10 +15,11 @@ a {
   margin: 30px 0;
 }
 
-.App-logo {
-  max-width: 200px;
+.icon {
+  font-size: 70px;
   display: block;
-  margin: 0 auto;
+  text-align: center;
+  color: #5b5958;
 }
 
 .App-footer {
