--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -10,6 +10,7 @@
   border-radius: 10px;
   box-shadow: 0 10px 10px rgb(0 0 0 / 10%);
   margin: 20px 0;
+  border: solid 1px #ffa358;
 }
 
 .Dictionary input {
